# T4

./: CMakeLists.txt  ConsoleApplication7.cpp  README.md  Stack.cpp  Tests.cpp  base64.cpp  base64.hpp  circleDeck.cpp  circleDeck.h  main.cpp  procedures.cpp  test.cpp  tests.cpp  vector.cpp  vector.h
Desktop/T4/: CMakeLists.txt  main.cpp  tests.cpp
Desktop/T4/src/: struct.cpp  struct.h
lib/: cycle_vector_ocheredi_library.cpp  cycle_vector_ocheredi_library.h
libs/: cycle_vector_library.cpp  cycle_vector_library.h  list_queue_libs .h  list_queue_libs.cpp
src/: Deque.cpp  Deque.h  Funck.cpp  Funck.h  Lib_DS.h  Operators_DS.cpp  Stack.cpp  Stack.h  TVector.cpp  TVector.h  circleDeck.cpp  circleDeck.h  deque.cpp  deque.h  queue.cpp  queue.h  queue2linklist.cpp  queue2linklist.h  slist.cpp  slist.h  struct.cpp  struct.h  t_4.cpp  t_4.h  tlist.cpp  tlist.h  vector.cpp
